# UberEatsReceipt

./: README.md  pyproject.toml
tests/: test_ubereatsreceipt.py
