[tool.poetry]
name = "UberEatsReceipt"
version = "0.1.0"
description = ""
authors = ["dammy <dammy00@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
selenium = "^3.141.0"
chromedriver-binary = "^92.0.4515"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
